--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -122,11 +122,11 @@
             android:id="@+id/layout_woof_walk"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_marginBottom="20dp"
             android:layout_marginHorizontal="12dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/rect_coral10_fill_50"
-            android:visibility="gone"
             android:elevation="10dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:visibility="visible">
 
@@ -151,8 +151,8 @@
                 myWalkStatus="@{vm.myWalkStatus}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:drawablePadding="10dp"
+                android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/btn_woof_end_walk"
                 app:layout_constraintStart_toStartOf="parent"
@@ -162,14 +162,14 @@
 
             <Chronometer
                 android:id="@+id/chronometer_woof_walk_time"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/btn_woof_end_walk"
-                app:layout_constraintTop_toTopOf="parent"
-                style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size20"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -267,32 +267,46 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_register_marker"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="240dp"
             android:layout_margin="12dp"
             android:background="@drawable/rect_white_fill_30"
             android:elevation="10dp"
             android:paddingHorizontal="6dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
             <TextView
                 android:id="@+id/tv_woof_register_walk_area"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size26"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="24dp"
                 android:text="@string/woof_register_walk_area"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/btn_woof_register_help"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="8dp"
+                android:backgroundTint="@color/transparent"
+                android:onClick="@{() -> actionHandler.clickRegisterHelp()}"
+                android:src="@drawable/ic_help"
+                app:layout_constraintBottom_toBottomOf="@id/tv_woof_register_walk_area"
+                app:layout_constraintStart_toEndOf="@id/tv_woof_register_walk_area"
+                app:layout_constraintTop_toTopOf="@id/tv_woof_register_walk_area" />
+
 
             <TextView
                 android:id="@+id/tv_woof_address"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
                 android:text="@{vm.registerAddress}"
                 app:layout_constraintStart_toStartOf="parent"
